--- a/telenor-work-project/src/assets/main.css
+++ b/telenor-work-project/src/assets/main.css
@@ -16,3 +16,11 @@ a,
     background-color: hsla(160, 100%, 37%, 0.2);
   }
 }
+
+.container {
+  padding: 4rem 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  gap: 2rem;
+}
