--- a/telenor-work-project/src/assets/main.css
+++ b/telenor-work-project/src/assets/main.css
@@ -24,3 +24,18 @@ a,
   min-height: 100vh;
   gap: 2rem;
 }
+
+.content {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+
+  padding: 2rem;
+
+  color: rgba(60, 60, 60, 0.66);
+  background-color: #f8f8f8;
+  border-style: solid;
+  border-width: thin;
+  border-color: #f8f8f8;
+}
